Remove java 8 gc options from windows scripts.