@@ -206,63 +206,30 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
       # Parse Java config settings - GC
       $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.enabled' -Neo4jServer $Neo4jServer)
       if (($option -ne $null) -and ($option.value.ToLower() -eq 'true')) {
-        if ($javaVersion.isJava8) {
-          # JAVA 8 GC logs configuration
-          $ShellArgs += "-Xloggc:`"$($Neo4jServer.LogDir)/gc.log`""
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
-          if ($option -eq $null) {
-            $ShellArgs += @('-XX:+PrintGCDetails',
-              '-XX:+PrintGCDateStamps',
-              '-XX:+PrintGCApplicationStoppedTime',
-              '-XX:+PrintPromotionFailure',
-              '-XX:+PrintTenuringDistribution',
-              '-XX:+UseGCLogFileRotation')
-          } else {
-            # The GC options _should_ be space delimited
-            $ShellArgs += ($option.value -split ' ')
-          }
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $ShellArgs += "-XX:GCLogFileSize=$( $option.value )"
-          } else {
-            $ShellArgs += "-XX:GCLogFileSize=20m"
-          }
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $ShellArgs += "-XX:NumberOfGCLogFiles=$( $option.value )"
-          } else {
-            $ShellArgs += "-XX:NumberOfGCLogFiles=5"
-          }
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions = $option.value
         } else {
-          # JAVA 9 and newer GC logs configuration
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $gcOptions = $option.value
-          } else {
-            $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
-          }
-          # GC file name should be escaped on Windows because of ':' usage as part of absolute name
-          $gcFile = "\`"" + "$($Neo4jServer.LogDir)/gc.log" + "\`""
-          $gcOptions += ":file=$( $gcFile )::"
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $gcOptions += "filecount=$( $option.value )"
-          } else {
-            $gcOptions += "filecount=5"
-          }
-
-          $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
-          if ($option -ne $null) {
-            $gcOptions += ",filesize=$( $option.value )"
-          } else {
-            $gcOptions += ",filesize=20m"
-          }
-          $ShellArgs += $gcOptions
+          $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
         }
+        # GC file name should be escaped on Windows because of ':' usage as part of absolute name
+        $gcFile = "\`"" + "$($Neo4jServer.LogDir)/gc.log" + "\`""
+        $gcOptions += ":file=$( $gcFile )::"
+
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions += "filecount=$( $option.value )"
+        } else {
+          $gcOptions += "filecount=5"
+        }
+
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions += ",filesize=$( $option.value )"
+        } else {
+          $gcOptions += ",filesize=20m"
+        }
+        $ShellArgs += $gcOptions
       }
       $ShellArgs += @("-Dfile.encoding=UTF-8",
         $serverMainClass,
